Start implementing copper storage tier, barrels, old chests and upgrades tba.

--- a/common/src/main/resources/assets/expandedstorage/lang/en_us.json
+++ b/common/src/main/resources/assets/expandedstorage/lang/en_us.json
@@ -66,11 +66,20 @@
   "tooltip.expandedstorage.conversion_kit.need_x_upgrades": "Cannot upgrade %ss, you need %s more upgrade(s).",
   "tooltip.expandedstorage.added_by": "Added by: %s",
   "tooltip.expandedstorage.stores_x_stacks": "Stores %s stacks",
+  "block.expandedstorage.copper_barrel": "Copper Barrel",
+  "block.expandedstorage.exposed_copper_barrel": "Exposed Copper Barrel",
+  "block.expandedstorage.weathered_copper_barrel": "Weathered Copper Barrel",
+  "block.expandedstorage.oxidized_copper_barrel": "Oxidized Copper Barrel",
+  "block.expandedstorage.waxed_copper_barrel": "Waxed Copper Barrel",
+  "block.expandedstorage.waxed_exposed_copper_barrel": "Waxed Exposed Copper Barrel",
+  "block.expandedstorage.waxed_weathered_copper_barrel": "Waxed Weathered Copper Barrel",
+  "block.expandedstorage.waxed_oxidized_copper_barrel": "Waxed Oxidized Copper Barrel",
   "block.expandedstorage.iron_barrel": "Iron Barrel",
   "block.expandedstorage.gold_barrel": "Gold Barrel",
   "block.expandedstorage.diamond_barrel": "Diamond Barrel",
   "block.expandedstorage.obsidian_barrel": "Obsidian Barrel",
   "block.expandedstorage.netherite_barrel": "Netherite Barrel",
+  "stat.expandedstorage.open_copper_barrel": "[ES] Copper Barrels Opened",
   "stat.expandedstorage.open_iron_barrel": "[ES] Iron Barrels Opened",
   "stat.expandedstorage.open_gold_barrel": "[ES] Gold Barrels Opened",
   "stat.expandedstorage.open_diamond_barrel": "[ES] Diamond Barrels Opened",
@@ -80,6 +89,14 @@
   "block.expandedstorage.pumpkin_chest": "Pumpkin Chest",
   "block.expandedstorage.present": "Present",
   "block.expandedstorage.bamboo_chest": "Bamboo Chest",
+  "block.expandedstorage.copper_chest": "Copper Chest",
+  "block.expandedstorage.exposed_copper_chest": "Exposed Copper Chest",
+  "block.expandedstorage.weathered_copper_chest": "Weathered Copper Chest",
+  "block.expandedstorage.oxidized_copper_chest": "Oxidized Copper Chest",
+  "block.expandedstorage.waxed_copper_chest": "Waxed Copper Chest",
+  "block.expandedstorage.waxed_exposed_copper_chest": "Waxed Exposed Copper Chest",
+  "block.expandedstorage.waxed_weathered_copper_chest": "Waxed Weathered Copper Chest",
+  "block.expandedstorage.waxed_oxidized_copper_chest": "Waxed Oxidized Copper Chest",
   "block.expandedstorage.iron_chest": "Iron Chest",
   "block.expandedstorage.gold_chest": "Gold Chest",
   "block.expandedstorage.diamond_chest": "Diamond Chest",
@@ -89,6 +106,14 @@
   "item.expandedstorage.pumpkin_chest_minecart": "Minecart with Pumpkin Chest",
   "item.expandedstorage.present_minecart": "Minecart with Present",
   "item.expandedstorage.bamboo_chest_minecart": "Minecart with Bamboo Chest",
+  "item.expandedstorage.copper_chest_minecart": "Minecart with Copper Chest",
+  "item.expandedstorage.exposed_copper_chest_minecart": "Minecart with Exposed Copper Chest",
+  "item.expandedstorage.weathered_copper_chest_minecart": "Minecart with Weathered Copper Chest",
+  "item.expandedstorage.oxidized_copper_chest_minecart": "Minecart with Oxidized Copper Chest",
+  "item.expandedstorage.waxed_copper_chest_minecart": "Minecart with Waxed Copper Chest",
+  "item.expandedstorage.waxed_exposed_copper_chest_minecart": "Minecart with Waxed Exposed Copper Chest",
+  "item.expandedstorage.waxed_weathered_copper_chest_minecart": "Minecart with Waxed Weathered Copper Chest",
+  "item.expandedstorage.waxed_oxidized_copper_chest_minecart": "Minecart with Waxed Oxidized Copper Chest",
   "item.expandedstorage.iron_chest_minecart": "Minecart with Iron Chest",
   "item.expandedstorage.gold_chest_minecart": "Minecart with Gold Chest",
   "item.expandedstorage.diamond_chest_minecart": "Minecart with Diamond Chest",
@@ -98,18 +123,28 @@
   "stat.expandedstorage.open_pumpkin_chest": "[ES] Pumpkin Chests Opened",
   "stat.expandedstorage.open_present": "[ES] Presents Opened",
   "stat.expandedstorage.open_bamboo_chest": "[ES] Bamboo Chests Opened",
+  "stat.expandedstorage.open_copper_chest": "[ES] Copper Chests Opened",
   "stat.expandedstorage.open_iron_chest": "[ES] Iron Chests Opened",
   "stat.expandedstorage.open_gold_chest": "[ES] Gold Chests Opened",
   "stat.expandedstorage.open_diamond_chest": "[ES] Diamond Chests Opened",
   "stat.expandedstorage.open_obsidian_chest": "[ES] Obsidian Chests Opened",
   "stat.expandedstorage.open_netherite_chest": "[ES] Netherite Chests Opened",
+  "block.expandedstorage.old_wood_chest": "Old Chest",
+  "block.expandedstorage.old_copper_chest": "Old Copper Chest",
+  "block.expandedstorage.old_exposed_copper_chest": "Old Exposed Copper Chest",
+  "block.expandedstorage.old_weathered_copper_chest": "Old Weathered Copper Chest",
+  "block.expandedstorage.old_oxidized_copper_chest": "Old Oxidized Copper Chest",
+  "block.expandedstorage.waxed_old_copper_chest": "Waxed Old Copper Chest",
+  "block.expandedstorage.waxed_old_exposed_copper_chest": "Waxed Old Exposed Copper Chest",
+  "block.expandedstorage.waxed_old_weathered_copper_chest": "Waxed Old Weathered Copper Chest",
+  "block.expandedstorage.waxed_old_oxidized_copper_chest": "Waxed Old Oxidized Copper Chest",
   "block.expandedstorage.old_iron_chest": "Old Iron Chest",
   "block.expandedstorage.old_gold_chest": "Old Gold Chest",
   "block.expandedstorage.old_diamond_chest": "Old Diamond Chest",
   "block.expandedstorage.old_obsidian_chest": "Old Obsidian Chest",
   "block.expandedstorage.old_netherite_chest": "Old Netherite Chest",
-  "block.expandedstorage.old_wood_chest": "Old Chest",
   "stat.expandedstorage.open_old_wood_chest": "[ES] Old Chests Opened",
+  "stat.expandedstorage.open_old_copper_chest": "[ES] Old Copper Chests Opened",
   "stat.expandedstorage.open_old_iron_chest": "[ES] Old Iron Chests Opened",
   "stat.expandedstorage.open_old_gold_chest": "[ES] Old Gold Chests Opened",
   "stat.expandedstorage.open_old_diamond_chest": "[ES] Old Diamond Chests Opened",
