--- a/common/src/main/resources/assets/expandedstorage/lang/en_us.json
+++ b/common/src/main/resources/assets/expandedstorage/lang/en_us.json
@@ -1,21 +1,27 @@
 {
   "itemGroup.expandedstorage.tab": "Expanded Storage",
   "item.expandedstorage.storage_mutator": "Storage Mutator",
-  "item.expandedstorage.diamond_to_netherite_conversion_kit": "Diamond to Netherite upgrade",
-  "item.expandedstorage.diamond_to_obsidian_conversion_kit": "Diamond to Obsidian upgrade",
-  "item.expandedstorage.gold_to_diamond_conversion_kit": "Gold to Diamond upgrade",
-  "item.expandedstorage.gold_to_netherite_conversion_kit": "Gold to Netherite upgrade",
-  "item.expandedstorage.gold_to_obsidian_conversion_kit": "Gold to Obsidian upgrade",
-  "item.expandedstorage.iron_to_diamond_conversion_kit": "Iron to Diamond upgrade",
-  "item.expandedstorage.iron_to_gold_conversion_kit": "Iron to Gold upgrade",
-  "item.expandedstorage.iron_to_netherite_conversion_kit": "Iron to Netherite upgrade",
-  "item.expandedstorage.iron_to_obsidian_conversion_kit": "Iron to Obsidian upgrade",
-  "item.expandedstorage.obsidian_to_netherite_conversion_kit": "Obsidian to Netherite upgrade",
-  "item.expandedstorage.wood_to_diamond_conversion_kit": "Wood to Diamond upgrade",
-  "item.expandedstorage.wood_to_gold_conversion_kit": "Wood to Gold upgrade",
+  "item.expandedstorage.wood_to_copper_conversion_kit": "Wood to Copper upgrade",
   "item.expandedstorage.wood_to_iron_conversion_kit": "Wood to Iron upgrade",
-  "item.expandedstorage.wood_to_netherite_conversion_kit": "Wood to Netherite upgrade",
+  "item.expandedstorage.wood_to_gold_conversion_kit": "Wood to Gold upgrade",
+  "item.expandedstorage.wood_to_diamond_conversion_kit": "Wood to Diamond upgrade",
   "item.expandedstorage.wood_to_obsidian_conversion_kit": "Wood to Obsidian upgrade",
+  "item.expandedstorage.wood_to_netherite_conversion_kit": "Wood to Netherite upgrade",
+  "item.expandedstorage.copper_to_iron_conversion_kit": "Copper to Iron upgrade",
+  "item.expandedstorage.copper_to_gold_conversion_kit": "Copper to Gold upgrade",
+  "item.expandedstorage.copper_to_diamond_conversion_kit": "Copper to Diamond upgrade",
+  "item.expandedstorage.copper_to_obsidian_conversion_kit": "Copper to Obsidian upgrade",
+  "item.expandedstorage.copper_to_netherite_conversion_kit": "Copper to Netherite upgrade",
+  "item.expandedstorage.iron_to_gold_conversion_kit": "Iron to Gold upgrade",
+  "item.expandedstorage.iron_to_diamond_conversion_kit": "Iron to Diamond upgrade",
+  "item.expandedstorage.iron_to_obsidian_conversion_kit": "Iron to Obsidian upgrade",
+  "item.expandedstorage.iron_to_netherite_conversion_kit": "Iron to Netherite upgrade",
+  "item.expandedstorage.gold_to_diamond_conversion_kit": "Gold to Diamond upgrade",
+  "item.expandedstorage.gold_to_obsidian_conversion_kit": "Gold to Obsidian upgrade",
+  "item.expandedstorage.gold_to_netherite_conversion_kit": "Gold to Netherite upgrade",
+  "item.expandedstorage.diamond_to_obsidian_conversion_kit": "Diamond to Obsidian upgrade",
+  "item.expandedstorage.diamond_to_netherite_conversion_kit": "Diamond to Netherite upgrade",
+  "item.expandedstorage.obsidian_to_netherite_conversion_kit": "Obsidian to Netherite upgrade",
   "container.expandedstorage.generic_double": "Large %s",
   "tooltip.expandedstorage.alt_use": "%1$s + %2$s",
   "tooltip.expandedstorage.storage_mutator.tool_mode": "Tool Mode: %s",
@@ -33,6 +39,8 @@
   "tooltip.expandedstorage.storage_mutator.description_split": "%s on a chest to split it into two single chests.",
   "tooltip.expandedstorage.storage_mutator.swap_theme": "Swap theme",
   "tooltip.expandedstorage.storage_mutator.description_swap_theme": "%s on a block to change its style.",
+  "tooltip.expandedstorage.conversion_kit_wood_copper_1": "%s on a Wooden Storage Block",
+  "tooltip.expandedstorage.conversion_kit_wood_copper_2": " to convert it to an Copper Storage Block.",
   "tooltip.expandedstorage.conversion_kit_wood_iron_1": "%s on a Wooden Storage Block",
   "tooltip.expandedstorage.conversion_kit_wood_iron_2": " to convert it to an Iron Storage Block.",
   "tooltip.expandedstorage.conversion_kit_wood_gold_1": "%s on a Wooden Storage Block",
@@ -43,6 +51,16 @@
   "tooltip.expandedstorage.conversion_kit_wood_obsidian_2": " to convert it to a Obsidian Storage Block.",
   "tooltip.expandedstorage.conversion_kit_wood_netherite_1": "%s on a Wooden Storage Block",
   "tooltip.expandedstorage.conversion_kit_wood_netherite_2": " to convert it to a Netherite Storage Block.",
+  "tooltip.expandedstorage.conversion_kit_copper_iron_1": "%s on an Copper Storage Block",
+  "tooltip.expandedstorage.conversion_kit_copper_iron_2": " to convert it to a Iron Storage Block.",
+  "tooltip.expandedstorage.conversion_kit_copper_gold_1": "%s on an Copper Storage Block",
+  "tooltip.expandedstorage.conversion_kit_copper_gold_2": " to convert it to a Gold Storage Block.",
+  "tooltip.expandedstorage.conversion_kit_copper_diamond_1": "%s on an Copper Storage Block",
+  "tooltip.expandedstorage.conversion_kit_copper_diamond_2": " to convert it to a Diamond Storage Block.",
+  "tooltip.expandedstorage.conversion_kit_copper_obsidian_1": "%s on an Copper Storage Block",
+  "tooltip.expandedstorage.conversion_kit_copper_obsidian_2": " to convert it to a Obsidian Storage Block.",
+  "tooltip.expandedstorage.conversion_kit_copper_netherite_1": "%s on an Copper Storage Block",
+  "tooltip.expandedstorage.conversion_kit_copper_netherite_2": " to convert it to a Netherite Storage Block.",
   "tooltip.expandedstorage.conversion_kit_iron_gold_1": "%s on an Iron Storage Block",
   "tooltip.expandedstorage.conversion_kit_iron_gold_2": " to convert it to a Gold Storage Block.",
   "tooltip.expandedstorage.conversion_kit_iron_diamond_1": "%s on an Iron Storage Block",
