Add mini barrel assets.

--- a/common/src/main/resources/assets/expandedstorage/lang/en_us.json
+++ b/common/src/main/resources/assets/expandedstorage/lang/en_us.json
@@ -182,6 +182,12 @@
   "block.expandedstorage.diamond_mini_chest": "Diamond Mini Chest",
   "block.expandedstorage.obsidian_mini_chest": "Obsidian Mini Chest",
   "block.expandedstorage.netherite_mini_chest": "Netherite Mini Chest",
+  "block.expandedstorage.mini_barrel": "Mini Barrel",
+  "block.expandedstorage.iron_mini_barrel": "Iron Mini Barrel",
+  "block.expandedstorage.gold_mini_barrel": "Gold Mini Barrel",
+  "block.expandedstorage.diamond_mini_barrel": "Diamond Mini Barrel",
+  "block.expandedstorage.obsidian_mini_barrel": "Obsidian Mini Barrel",
+  "block.expandedstorage.netherite_mini_barrel": "Netherite Mini Barrel",
   "block.expandedstorage.vanilla_wood_mini_chest_with_sparrow": "Mini Chest",
   "block.expandedstorage.wood_mini_chest_with_sparrow": "Mini Chest",
   "block.expandedstorage.pumpkin_mini_chest_with_sparrow": "Pumpkin Mini Chest",
@@ -196,6 +202,12 @@
   "block.expandedstorage.diamond_mini_chest_with_sparrow": "Diamond Mini Chest",
   "block.expandedstorage.obsidian_mini_chest_with_sparrow": "Obsidian Mini Chest",
   "block.expandedstorage.netherite_mini_chest_with_sparrow": "Netherite Mini Chest",
+  "block.expandedstorage.mini_barrel_with_sparrow": "Mini Barrel",
+  "block.expandedstorage.iron_mini_barrel_with_sparrow": "Iron Mini Barrel",
+  "block.expandedstorage.gold_mini_barrel_with_sparrow": "Gold Mini Barrel",
+  "block.expandedstorage.diamond_mini_barrel_with_sparrow": "Diamond Mini Barrel",
+  "block.expandedstorage.obsidian_mini_barrel_with_sparrow": "Obsidian Mini Barrel",
+  "block.expandedstorage.netherite_mini_barrel_with_sparrow": "Netherite Mini Barrel",
   "stat.expandedstorage.open_vanilla_wood_mini_chest": "[ES] Mini Chests (vanilla theme) Opened",
   "stat.expandedstorage.open_wood_mini_chest": "[ES] Mini Chests Opened",
   "stat.expandedstorage.open_pumpkin_mini_chest": "[ES] Pumpkin Mini Chests Opened",
