Fixes to mini barrel assets, add mini barrel blocks.

--- a/common/src/main/resources/assets/expandedstorage/lang/en_us.json
+++ b/common/src/main/resources/assets/expandedstorage/lang/en_us.json
@@ -222,6 +222,12 @@
   "stat.expandedstorage.open_diamond_mini_chest": "[ES] Diamond Mini Chests Opened",
   "stat.expandedstorage.open_obsidian_mini_chest": "[ES] Obsidian Mini Chests Opened",
   "stat.expandedstorage.open_netherite_mini_chest": "[ES] Netherite Mini Chests Opened",
+  "stat.expandedstorage.open_mini_barrel": "[ES] Mini Barrels Opened",
+  "stat.expandedstorage.open_iron_mini_barrel": "[ES] Iron Mini Barrels Opened",
+  "stat.expandedstorage.open_gold_mini_barrel": "[ES] Gold Mini Barrels Opened",
+  "stat.expandedstorage.open_diamond_mini_barrel": "[ES] Diamond Mini Barrels Opened",
+  "stat.expandedstorage.open_obsidian_mini_barrel": "[ES] Obsidian Mini Barrels Opened",
+  "stat.expandedstorage.open_netherite_mini_barrel": "[ES] Netherite Mini Barrels Opened",
   "screen.ellemes_container_lib.change_screen_button": "Change Screen Type",
   "screen.ellemes_container_lib.screen_picker_title": "Select Screen Type",
   "screen.ellemes_container_lib.page_screen": "Paginated Screen",
