--- a/common/src/main/resources/assets/expandedstorage/lang/en_us.json
+++ b/common/src/main/resources/assets/expandedstorage/lang/en_us.json
@@ -183,6 +183,14 @@
   "block.expandedstorage.obsidian_mini_chest": "Obsidian Mini Chest",
   "block.expandedstorage.netherite_mini_chest": "Netherite Mini Chest",
   "block.expandedstorage.mini_barrel": "Mini Barrel",
+  "block.expandedstorage.copper_mini_barrel": "Copper Mini Barrel",
+  "block.expandedstorage.exposed_copper_mini_barrel": "Exposed Copper Mini Barrel",
+  "block.expandedstorage.weathered_copper_mini_barrel": "Weathered Copper Mini Barrel",
+  "block.expandedstorage.oxidized_copper_mini_barrel": "Oxidized Copper Mini Barrel",
+  "block.expandedstorage.waxed_copper_mini_barrel": "Waxed Copper Mini Barrel",
+  "block.expandedstorage.waxed_exposed_copper_mini_barrel": "Waxed Exposed Copper Mini Barrel",
+  "block.expandedstorage.waxed_weathered_copper_mini_barrel": "Waxed Weathered Copper Mini Barrel",
+  "block.expandedstorage.waxed_oxidized_copper_mini_barrel": "Waxed Oxidized Copper Mini Barrel",
   "block.expandedstorage.iron_mini_barrel": "Iron Mini Barrel",
   "block.expandedstorage.gold_mini_barrel": "Gold Mini Barrel",
   "block.expandedstorage.diamond_mini_barrel": "Diamond Mini Barrel",
@@ -203,6 +211,14 @@
   "block.expandedstorage.obsidian_mini_chest_with_sparrow": "Obsidian Mini Chest",
   "block.expandedstorage.netherite_mini_chest_with_sparrow": "Netherite Mini Chest",
   "block.expandedstorage.mini_barrel_with_sparrow": "Mini Barrel",
+  "block.expandedstorage.copper_mini_barrel_with_sparrow": "Copper Mini Barrel",
+  "block.expandedstorage.exposed_copper_mini_barrel_with_sparrow": "Exposed Copper Mini Barrel",
+  "block.expandedstorage.weathered_copper_mini_barrel_with_sparrow": "Weathered Copper Mini Barrel",
+  "block.expandedstorage.oxidized_copper_mini_barrel_with_sparrow": "Oxidized Copper Mini Barrel",
+  "block.expandedstorage.waxed_copper_mini_barrel_with_sparrow": "Waxed Copper Mini Barrel",
+  "block.expandedstorage.waxed_exposed_copper_mini_barrel_with_sparrow": "Waxed Exposed Copper Mini Barrel",
+  "block.expandedstorage.waxed_weathered_copper_mini_barrel_with_sparrow": "Waxed Weathered Copper Mini Barrel",
+  "block.expandedstorage.waxed_oxidized_copper_mini_barrel_with_sparrow": "Waxed Oxidized Copper Mini Barrel",
   "block.expandedstorage.iron_mini_barrel_with_sparrow": "Iron Mini Barrel",
   "block.expandedstorage.gold_mini_barrel_with_sparrow": "Gold Mini Barrel",
   "block.expandedstorage.diamond_mini_barrel_with_sparrow": "Diamond Mini Barrel",
@@ -223,6 +239,7 @@
   "stat.expandedstorage.open_obsidian_mini_chest": "[ES] Obsidian Mini Chests Opened",
   "stat.expandedstorage.open_netherite_mini_chest": "[ES] Netherite Mini Chests Opened",
   "stat.expandedstorage.open_mini_barrel": "[ES] Mini Barrels Opened",
+  "stat.expandedstorage.open_copper_mini_barrel": "[ES] Copper Mini Barrels Opened",
   "stat.expandedstorage.open_iron_mini_barrel": "[ES] Iron Mini Barrels Opened",
   "stat.expandedstorage.open_gold_mini_barrel": "[ES] Gold Mini Barrels Opened",
   "stat.expandedstorage.open_diamond_mini_barrel": "[ES] Diamond Mini Barrels Opened",
