Moss chests except textures and runned datagen.

--- a/common/src/main/resources/assets/expandedstorage/lang/en_us.json
+++ b/common/src/main/resources/assets/expandedstorage/lang/en_us.json
@@ -107,6 +107,7 @@
   "block.expandedstorage.pumpkin_chest": "Pumpkin Chest",
   "block.expandedstorage.present": "Present",
   "block.expandedstorage.bamboo_chest": "Bamboo Chest",
+  "block.expandedstorage.moss_chest": "Moss Chest",
   "block.expandedstorage.copper_chest": "Copper Chest",
   "block.expandedstorage.exposed_copper_chest": "Exposed Copper Chest",
   "block.expandedstorage.weathered_copper_chest": "Weathered Copper Chest",
@@ -124,6 +125,7 @@
   "item.expandedstorage.pumpkin_chest_minecart": "Minecart with Pumpkin Chest",
   "item.expandedstorage.present_minecart": "Minecart with Present",
   "item.expandedstorage.bamboo_chest_minecart": "Minecart with Bamboo Chest",
+  "item.expandedstorage.moss_chest_minecart": "Minecart with Moss Chest",
   "item.expandedstorage.copper_chest_minecart": "Minecart with Copper Chest",
   "item.expandedstorage.exposed_copper_chest_minecart": "Minecart with Exposed Copper Chest",
   "item.expandedstorage.weathered_copper_chest_minecart": "Minecart with Weathered Copper Chest",
@@ -141,6 +143,7 @@
   "stat.expandedstorage.open_pumpkin_chest": "[ES] Pumpkin Chests Opened",
   "stat.expandedstorage.open_present": "[ES] Presents Opened",
   "stat.expandedstorage.open_bamboo_chest": "[ES] Bamboo Chests Opened",
+  "stat.expandedstorage.open_moss_chest": "[ES] Moss Chests Opened",
   "stat.expandedstorage.open_copper_chest": "[ES] Copper Chests Opened",
   "stat.expandedstorage.open_iron_chest": "[ES] Iron Chests Opened",
   "stat.expandedstorage.open_gold_chest": "[ES] Gold Chests Opened",
