--- a/common/src/main/resources/assets/expandedstorage/lang/en_us.json
+++ b/common/src/main/resources/assets/expandedstorage/lang/en_us.json
@@ -101,7 +101,7 @@
   "tooltip.expandedstorage.conversion_kit_obsidian_netherite_1":           "%s on an Obsidian Storage Block",
   "tooltip.expandedstorage.conversion_kit_obsidian_netherite_2":           " to convert it to a Netherite Storage Block.",
 
-  "tooltip.expandedstorage.conversion_kit.need_x_upgrades":                "Cannot upgrade %ss, you need %s more upgrade(s).",
+  "tooltip.expandedstorage.conversion_kit.need_x_upgrades":                "Upgrade failed, you need %s more upgrade(s).",
 
   "block.expandedstorage.copper_barrel":                                   "Copper Barrel",
   "block.expandedstorage.exposed_copper_barrel":                           "Exposed Copper Barrel",
