--- a/common/src/main/resources/assets/expandedstorage/lang/en_us.json
+++ b/common/src/main/resources/assets/expandedstorage/lang/en_us.json
@@ -247,12 +247,12 @@
   "screen.ellemes_container_lib.off_screen_warning_1":                  "Part of the screen may not be visible",
   "screen.ellemes_container_lib.off_screen_warning_2":                  " if you pick this option.",
   "screen.ellemes_container_lib.current_option_notice":                 "This is your current preference.",
-  "key.ellemes_container_lib.config":                                   "[ECL] Open Screen Select",
   "chat.ellemes_container_lib.cannot_display_screen":                   "Cannot open the inventory with \"%s\" type, please try a different one.",
-  "generic.ellemes_container_lib.label":                                "[ECL] ",
 
   "text.expandedstorage.disconnect.old_version":                        "Please update Expanded Storage.",
 
+  "key.expandedstorage.open_config_screen":                             "[ES] Open Screen Select",
+  "text.expandedstorage.short_prefix":                                  "[ES] ",
   "text.expandedstorage.prefix":                                        "[Expanded Storage] %s",
   "text.expandedstorage.wrong_loader_warning":                          "Please install the %2$s release of this mod, this hasn't been tested for %1$s so there may be issues which support will not be provided for otherwise."
 }
